--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,4 +1,8 @@
 
+2019.07.10
++ add formatter "JS Sort Imports"
+* renamed other formatters
+
 2019.07.09
 + allow all JavaScript* and JSON* lexers (using regex)
 
